--- a/assets/css/projets.css
+++ b/assets/css/projets.css
@@ -197,7 +197,8 @@
 /* Image du projet (optionnelle) */
 .project-image {
   width: 100%;
-  height: 350px;
+  /*j'enleve heigth: 350px et je remplace par 200px*/
+  height: 100%;
   object-fit: cover;
   border-radius: var(--radius);
   background: var(--color-alt);
@@ -356,6 +357,10 @@
 
   .projects-grid-detailed {
     grid-template-columns: repeat(2, 1fr);
+  }
+  /*je rajoute une solution potentiel au probleme de l'affichage dans le mobile*/
+  .project-image {
+    height: 350px;
   }
 
   .filters-wrapper {
